Adding Angular Integration

--- a/open-sponsor/index.html
+++ b/open-sponsor/index.html
@@ -12,5 +12,6 @@
     <body>
         <script src="src/index.js"></script>
         <p class="app body">Application Body</p>
+        <app-root></app-root>
     </body>
 </html>
